Implementació i documentació DELETE d'una votació
